--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,22 @@
 .header {
   background-color: var(--header-background-color);
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.image-list-view {
+  display: grid;
+  width: 1160px;
+  margin: auto;
+  max-width: 95vw;
+  grid-template-columns: repeat(4, 1fr);
+
+  img {
+    max-width: 100%;
+    object-fit: cover;
+    display: block;
+  }
 }
