--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,18 +5,34 @@
   align-items: center;
   padding-left: 1rem;
   padding-right: 1rem;
+  border-bottom: 1px solid #ddd;
 }
 
 .image-list-view {
   display: grid;
   width: 1160px;
   margin: auto;
-  max-width: 95vw;
-  grid-template-columns: repeat(4, 1fr);
+  max-width: 100%;
+  grid-template-columns: 1fr;
+  background-color: #fff;
+  padding: 1rem;
+
+  &--grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   img {
     max-width: 100%;
-    object-fit: cover;
     display: block;
   }
+}
+
+.content {
+  padding: 1rem;
+}
+
+
+button img {
+  width: 32px;
+  height: 32px;
 }
