Message with no images

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,4 +19,5 @@ body {
   background-color: var(--body-background-color);
   min-height: 100vh;
   font-family: 'Montserrat', sans-serif;
+  overflow-y: scroll;
 }
