--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -78,7 +78,20 @@
 
 .toolbar {
   background-color: #fff;
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+
+  span {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 }
 
 .search-form {
@@ -128,7 +141,11 @@
   max-width: 100%;
   grid-template-columns: 1fr;
   background-color: #fff;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
+
+  &:empty {
+    display: none;
+  }
 
   &--grid {
     grid-template-columns: repeat(4, 1fr);
@@ -142,7 +159,6 @@
 
 .content {
   padding: 1rem;
-  margin-top: 56px;
 }
 
 button img {
@@ -311,6 +327,10 @@ button img {
   &:focus {
     background-color: rgba(0, 0, 0, 0.2);
   }
+}
+
+.welcome-page {
+
 }
 
 @keyframes rotate-animation {
