Fixes for toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,12 +48,12 @@
   <section class="toolbar container" *ngIf="res">
     <ng-container *ngIf="res.total > 0">
     <section class="statistic">
-      Total items: {{ res.total }}
+      Total items: <strong>{{ res.total }}</strong>
     </section>
     <div class="pagination">
-      <button [disabled]="page == 1"  (click)="gotToPage(page - 1)"><i class="material-icons">arrow_back_ios</i></button>
+      <button class="pagination__button" [disabled]="page == 1"  (click)="gotToPage(page - 1)"><i class="material-icons">keyboard_arrow_left</i></button>
       <span>Page <strong>{{ page }}</strong> from: <strong>{{res.total_pages}}</strong></span>
-      <button (click)="gotToPage(page + 1)" [disabled]="page >= res.total_pages"><i class="material-icons">arrow_forward_ios</i></button>
+      <button class="pagination__button" (click)="gotToPage(page + 1)" [disabled]="page >= res.total_pages"><i class="material-icons">keyboard_arrow_right</i></button>
     </div>
     </ng-container>
     <ng-container *ngIf="res.total === 0">
@@ -65,6 +65,9 @@
     <ng-container *ngFor="let image of images">
       <article class="search-item" [ngClass]="{'search-item--grid' : gridView}" (click)="goToImageWebsite(image.links.html)">
         <div class="search-item__image-wrapper" [ngClass]="{'search-item__image-wrapper--grid' : gridView}">
+          <i class="material-icons">
+            image
+          </i>
           <img
             src="{{image.urls.thumb}}"
             alt="" class="search-item__thumbnail">
@@ -96,7 +99,7 @@
 
           <a class="search-item__button" href="{{ image.links.html }}" (click)="$event.stopPropagation()" >View</a>
 
-          <span class="search-item__status" *ngIf="image.created_at < expiredNewLabelDate">
+          <span class="search-item__status" *ngIf="image.created_at > expiredNewLabelDate">
             <i class="material-icons">
             star_border
             </i>
@@ -106,6 +109,7 @@
     </ng-container>
 
   </section>
+
 </div>
 
 <button class="scroll-to-top" (click)="scrollToTop()" title="Scroll to top">
