--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,32 @@
+
+$small: 567px;
+$medium: 768px;
+$desktop: 1024px;
+$wide: 1680px;
+
+@mixin res($breakpoint) {
+  @if $breakpoint == wide {
+    @media only screen and (min-width: $wide) {
+      @content;
+    } //1680
+  }
+  @if $breakpoint == desktop {
+    @media only screen and (min-width: $desktop) {
+      @content;
+    } //1024px;
+  }
+  @if $breakpoint == tab {
+    @media only screen and (min-width: $medium) {
+      @content;
+    } //760px;
+  }
+  @if $breakpoint == phone {
+    @media only screen and (min-width: $small) {
+      @content;
+    } //550px;
+  }
+}
+
 .header {
   background-color: var(--header-background-color);
   min-height: 56px;
@@ -14,6 +43,11 @@
     flex-direction: column-reverse;
     align-items: flex-end;
     padding: 0.5em;
+
+    @include res(desktop) {
+      flex-direction: row;
+      align-items: center;
+    }
   }
 }
 
@@ -21,6 +55,10 @@
   display: flex;
   list-style: none;
   margin-bottom: 0.5rem;
+
+  @include res(desktop) {
+    margin-bottom: 0;
+  }
 
   &__item {
     margin-left: 0.5rem;
@@ -88,6 +126,16 @@
   display: flex;
   align-items: center;
 
+  &__button {
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    font-size: 24px;
+  }
+
   span {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
@@ -97,6 +145,10 @@
 .search-form {
   display: flex;
   width: 100%;
+
+  @include res(desktop) {
+    width: 70%;
+  }
 
   &__input {
     flex: 1;
@@ -216,6 +268,16 @@ button img {
     justify-content: center;
     background-color: #fff;
     overflow: hidden;
+    position: relative;
+
+    .material-icons {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: 0;
+      opacity: 0.3;
+      transform: translate(-50%);
+    }
 
     &--grid {
       width: 100%;
@@ -227,6 +289,8 @@ button img {
   &__thumbnail {
     object-fit: contain;
     max-height: 100%;
+    position: relative;
+    z-index: 1;
     transition: transform 3s ease-in-out;
   }
 
