--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
 <header class="header">
   <div class="header__container">
-    <!--  <h1>MAUSE <span>Most Awesome Unsplash Search Engine</span></h1>-->
     <form action="" class="search-form" [formGroup]="searchForm" autocomplete="off">
-      <input autofocuss required type="search" id="search-text" class="search-form__input"
-             placeholder="eg. puppies (more than 2 letters)" formControlName="searchText">
+      <input autofocus required type="search" id="search-text" class="search-form__input"
+             placeholder="eg. puppies" formControlName="searchText">
       <select class="search-form__select" name="orientation" id="" formControlName="orientation">
-        <option value="portrait" [defaultSelected]="true">portrait</option>
-        <option value="landscape">landscape</option>
-        <option value="squarish">squarish</option>
+        <option *ngFor="let opt of options" [value]="opt.value">{{opt.value}}</option>
       </select>
     </form>
 
@@ -34,27 +31,29 @@
     </ul>
   </div>
 </header>
+<section class="welcome-page" *ngIf="!res">
+  <div class="welcome-page__icon-wrapper">
+    <h1 class="welcome-page__title">Feel free to use <strong>MAUSE</strong>!</h1>
+    <h2><span>M</span>ost <span>A</span>wesome <span>U</span>nsplash <span>S</span>earch <span>E</span>ngine</h2>
+    <svg id="bcb5bbf0-7a2c-468e-9169-def856f1bf3d" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="898.23872" height="566.34096" viewBox="0 0 898.23872 566.34096"><title>optimize_image</title><path d="M790.53175,646.07139H358.76435C244.33221,620.72986,150.88064,533.44518,150.88064,402.9176a271.80843,271.80843,0,0,1,6.36661-58.71408l348.02353-56.05926,268.4786-43.24289a480.15821,480.15821,0,0,1,54.91915,41.8614L571.683,384.79158,450.45154,431.03882l136.14515-33.83866L869.17334,326.968a481.98867,481.98867,0,0,1,46.655,61.39385L830.3746,452.25245l96.54745-45.69794q.61283,1.05685,1.22041,2.1171C988.71817,514.37707,912.36385,646.07139,790.53175,646.07139Z" transform="translate(-150.88064 -166.82952)" fill="#f2f2f2"/><path d="M721.535,215.23227c-65.35529,13.49881-145.70746,30.5596-228.32332,48.2945-119.45055,25.64945-243.62812,52.722-334.03368,72.51254l.06-.2344a80.79243,80.79243,0,0,1,23.08127-38.66247A478.7381,478.7381,0,0,1,429.78716,173.70378h.00833a483.29525,483.29525,0,0,1,81.40912-6.87426A478.25725,478.25725,0,0,1,721.535,215.23227Z" transform="translate(-150.88064 -166.82952)" fill="#f2f2f2"/><path d="M616.11936,215.67048v442h433v-442Zm393,312h-352v-274h352Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><path d="M855.49236,330.8973c-10.67463-18.03681-31.79353-18.87741-31.79353-18.87741s-20.57916-2.63164-33.78057,24.83865c-12.30476,25.60458-29.2869,50.32632-2.734,56.32016l4.79622-14.928,2.97028,16.03938a103.89288,103.89288,0,0,0,11.361.19417c28.436-.91808,55.517.26861,54.64508-9.93543C859.79773,370.984,865.76349,348.25233,855.49236,330.8973Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><path d="M782.61936,502.17048l-36,25s-21,22-6,22,21-19,21-19l46-20Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M797.11936,404.67048s-31.5,97.5-21.5,102.5,32,8,32,8Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><path d="M797.11936,404.67048s-31.5,97.5-21.5,102.5,32,8,32,8Z" transform="translate(-150.88064 -166.82952)" opacity="0.1"/><path d="M896.14939,527.67048h-70.91l50.38-25.5a32.12388,32.12388,0,0,1,3.19,2.36A63.96483,63.96483,0,0,1,896.14939,527.67048Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><circle cx="666.23872" cy="186.84096" r="26" fill="#ffb8b8"/><path d="M816.61936,375.17048s6,19,0,26,33-10,33-10-14-20-10-29Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M874.21934,461.98048l-2.1,13.69s1.06,3.11,2.35,7.64c1.68005,5.91,3.75,14.24,4.34,21.22.61,7.08-.31,12.78-4.69,13.14-6.28.52-9.55,4.33-12.81,10h-72.34c.19-3.12.42-6.36.69-9.69q.225-3,.5-6.08c.2-2.36,7.28589-46.68955,1.96-56.23-10.997-19.69937,3-31,3-31s2-15,2-20c0-3.92005,15.36-8.45,22-10.23.43-.11.81-.22,1.16-.3,1.15-.3,1.84-.47,1.84-.47l5.25-2.15s14.75-2.85,15.75-4.85a5.08121,5.08121,0,0,1,2.56-1.82c2.11-.9,4.8-1.54,5.44-2.18a25.489,25.489,0,0,0,2.47-3.36,13.36526,13.36526,0,0,1,7.36005-4.3c10.74-2.71,26.17,2.66,26.17,2.66l-5.4,35.25Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><path d="M905.61936,440.17048l-36,25s-21,22-6,22,21-19,21-19l46-20Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M843.773,329.1586l-20.86446-10.929-13.09039,2.03126a23.402,23.402,0,0,0-19.23593,17.95751l-2.44782,10.81118,14.83941-.57075,4.14557-9.673v9.51355l6.84725-.26338,3.9742-15.39994,2.48383,16.39352,24.34192-.49679Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><path d="M880.11936,379.67048l7-2s71,29,69,54,1,25-11,26-47-11-46-13,8-12,8-12l-27-21Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><circle cx="692.23872" cy="186.84096" r="4" fill="#ffb8b8"/><path d="M150.94071,417.67054V645.67036H374.298V417.67054Zm202.208,160.941H171.5742V437.27235H353.14872Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><path d="M250.82063,477.10879c5.50636-9.30405,16.40027-9.73766,16.40027-9.73766s10.61549-1.3575,17.42526,12.81268c6.34724,13.20779,15.10726,25.96017,1.41029,29.052l-2.47407-7.70041-1.53218,8.2737a53.5936,53.5936,0,0,1-5.86043.10016c-14.66834-.47358-28.63773.13855-28.18794-5.12507C248.59976,497.787,245.5224,486.06115,250.82063,477.10879Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><path d="M288.4112,565.45778l18.57012,12.89592s10.83257,11.34841,3.095,11.34841-10.83257-9.8009-10.83257-9.8009l-23.72849-10.31673Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M280.93157,515.1637s16.24885,50.29408,11.09048,52.87327-16.50677,4.12669-16.50677,4.12669Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><path d="M280.93157,515.1637s16.24885,50.29408,11.09048,52.87327-16.50677,4.12669-16.50677,4.12669Z" transform="translate(-150.88064 -166.82952)" opacity="0.1"/><path d="M229.84824,578.61162h36.578l-25.98786-13.15384a16.57048,16.57048,0,0,0-1.64552,1.21737A32.99537,32.99537,0,0,0,229.84824,578.61162Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><circle cx="119.73419" cy="322.02651" r="13.41176" fill="#ffb8b8"/><path d="M270.87275,499.94652s-3.095,9.8009,0,13.41175-17.02261-5.15836-17.02261-5.15836,7.22171-10.31674,5.15836-14.95927Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M241.16057,544.7263l1.08324,7.06181s-.54679,1.60425-1.2122,3.941a62.97606,62.97606,0,0,0-2.23875,10.946c-.31465,3.65213.15991,6.59241,2.41928,6.7781,3.23947.26822,4.92623,2.23355,6.60786,5.15837h37.31565c-.098-1.60941-.21668-3.28071-.35593-4.99846q-.11608-1.5475-.25792-3.13629c-.10317-1.21737-4.24686-24.09915-1.01105-29.00549,6.40732-9.71521-1.54751-15.99094-1.54751-15.99094s-1.03167-7.73755-1.03167-10.31674c0-2.0221-7.92325-4.35882-11.34841-5.277-.22181-.05673-.41783-.11347-.59836-.15474-.59322-.15475-.94915-.24243-.94915-.24243l-2.70815-1.10906s-7.60859-1.47013-8.12442-2.5018a2.62114,2.62114,0,0,0-1.32055-.93883,18.689,18.689,0,0,1-2.80615-1.12452,13.14739,13.14739,0,0,1-1.2741-1.7332,6.89422,6.89422,0,0,0-3.79658-2.21812c-5.54008-1.3979-13.49944,1.37214-13.49944,1.37214l2.78553,18.18325Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><path d="M224.96328,533.47591l18.57012,12.89591s10.83257,11.34841,3.095,11.34841-10.83257-9.8009-10.83257-9.8009L212.06736,537.6026Z" transform="translate(-150.88064 -166.82952)" fill="#ffb8b8"/><path d="M256.86592,476.2119l10.76265-5.63759,6.7525,1.0478a12.07162,12.07162,0,0,1,9.9226,9.26314l1.26268,5.57681-7.65471-.29442L275.7732,481.178v4.90744l-3.53206-.13586-2.05-7.94385-1.28125,8.45638-12.55646-.25626Z" transform="translate(-150.88064 -166.82952)" fill="#2f2e41"/><path d="M238.11712,502.26778l-3.61086-1.03167s-36.62441,14.95927-35.59274,27.85518-.51583,12.89592,5.67421,13.41176,24.24432-5.6742,23.72849-6.70588-4.1267-6.19-4.1267-6.19l13.9276-10.83257Z" transform="translate(-150.88064 -166.82952)" fill="#d0cde1"/><circle cx="106.32244" cy="322.02651" r="2.06335" fill="#ffb8b8"/><path d="M751.71464,531.908c-2.98743,5.27014-7.66236,11.65246-12.11963,15.35632l8.90155-1.68128a229.05519,229.05519,0,0,1-434.15064,49.68537l9.05066-.38526c-5.18231-2.59417-11.18512-7.74737-15.29181-12.20086.20954,6.05365-.44012,13.93823-2.3042,19.42566l6.69635-6.07434a231.055,231.055,0,0,0,437.97321-50.126l7.90222,4.39435C755.31022,545.38166,752.886,537.8509,751.71464,531.908Z" transform="translate(-150.88064 -166.82952)" fill="#6c63ff"/><path d="M961.92954,530.25072c-.20345-.33244-5.00048-8.3422-6.66355-24.97468-1.52542-15.25941-.54455-40.98035,12.79468-76.859,25.27076-67.9696-5.82379-122.81121-6.14152-123.35749l1.53408-.89c.08052.13852,8.10413,14.121,12.844,36.38592a158.7396,158.7396,0,0,1-6.57438,88.47969c-25.22747,67.85359-6.47222,99.9749-6.28,100.29176Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><circle cx="801.16742" cy="122.7144" r="11.52464" fill="#6c63ff"/><circle cx="837.51437" cy="165.26693" r="11.52464" fill="#3f3d56"/><circle cx="812.69206" cy="193.63529" r="11.52464" fill="#6c63ff"/><circle cx="842.83344" cy="217.57109" r="11.52464" fill="#6c63ff"/><circle cx="803.82695" cy="254.80455" r="11.52464" fill="#3f3d56"/><path d="M968.89177,530.67493s-11.52464-28.36835,23.04929-49.64462Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><path d="M954.71824,530.16034s-5.245-30.16738-45.84015-29.90882Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><path d="M200.47651,582.60943c.09738-.15912,2.39342-3.99291,3.18944-11.95385.73012-7.30374.26064-19.61478-6.124-36.78765-12.09556-32.53287,2.78749-58.78218,2.93957-59.04365l-.73427-.426a65.15969,65.15969,0,0,0-6.14765,17.41569,75.979,75.979,0,0,0,3.14675,42.34979c12.07484,32.47734,3.09786,47.85184,3.00587,48.0035Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><circle cx="54.32553" cy="300.56836" r="5.51614" fill="#6c63ff"/><circle cx="36.92848" cy="320.93564" r="5.51614" fill="#3f3d56"/><circle cx="48.80939" cy="334.51383" r="5.51614" fill="#6c63ff"/><circle cx="34.38257" cy="345.97042" r="5.51614" fill="#6c63ff"/><circle cx="53.05258" cy="363.79179" r="5.51614" fill="#3f3d56"/><path d="M197.14412,582.81247s5.51614-13.57819-11.03227-23.76183Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/><path d="M203.92812,582.56617s2.51044-14.43928,21.94086-14.31552Z" transform="translate(-150.88064 -166.82952)" fill="#3f3d56"/></svg>
+  </div>
+</section>
+
+<div class="content" *ngIf="res">
 
 
-<div class="content">
-
-  <section class="welcome-page" *ngIf="!res">
-    <div class="welcome-page__icon-wrapper">
-      <h2>Feel free to use our search engine!</h2>
-      <svg id="f6245ee5-e739-4f07-8284-f5c00440f05d" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="871.90856" height="596.59998" viewBox="0 0 871.90856 596.59998"><defs><linearGradient id="faa263ba-4d93-43f3-8f6b-5c0bfeed2f5a" x1="435.95428" y1="161.22673" x2="435.95428" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="gray" stop-opacity="0.25"/><stop offset="0.53514" stop-color="gray" stop-opacity="0.12"/><stop offset="1" stop-color="gray" stop-opacity="0.1"/></linearGradient><linearGradient id="e7b3f2b9-2797-469d-a8e7-bdddf2d3c493" x1="895.45571" y1="298.73532" x2="895.45571" y2="178.44409" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#b3b3b3" stop-opacity="0.25"/><stop offset="0.53514" stop-color="#b3b3b3" stop-opacity="0.1"/><stop offset="1" stop-color="#b3b3b3" stop-opacity="0.05"/></linearGradient><linearGradient id="b8dc7ddd-0e76-4866-9241-0076e20120d3" x1="858.28282" y1="221.34343" x2="858.28282" y2="215.55356" gradientUnits="userSpaceOnUse"><stop offset="0" stop-opacity="0.12"/><stop offset="0.55135" stop-opacity="0.09"/><stop offset="1" stop-opacity="0.02"/></linearGradient><linearGradient id="febfb89e-07b1-4842-b918-627d114e5328" x1="884.87591" y1="214.70119" x2="884.87591" y2="196.99804" xlink:href="#b8dc7ddd-0e76-4866-9241-0076e20120d3"/></defs><title>Search</title><rect width="871.90856" height="161.22673" fill="url(#faa263ba-4d93-43f3-8f6b-5c0bfeed2f5a)"/><rect x="5.09144" y="5.27725" width="860.45283" height="147.3786" fill="#fff"/><rect x="57.93932" y="35.36492" width="500.19403" height="87.71321" fill="#f5f5f5"/><path d="M916.21229,192.66152a46.319,46.319,0,1,0-7.57811,70.55358l33.4839,34.82841a2.25386,2.25386,0,0,0,3.18682.06273l8.34443-8.02231a2.25386,2.25386,0,0,0,.06272-3.18681l-33.4839-34.82842A46.32213,46.32213,0,0,0,916.21229,192.66152Zm-10.42905,55.9852a33.13094,33.13094,0,1,1,.922-46.84515A33.131,33.131,0,0,1,905.78324,248.64672Z" transform="translate(-164.04572 -151.70001)" fill="url(#e7b3f2b9-2797-469d-a8e7-bdddf2d3c493)"/><path d="M858.28282,215.55356c-3.72547,0-3.73167,5.78987,0,5.78987C862.0083,221.34343,862.0145,215.55356,858.28282,215.55356Z" transform="translate(-164.04572 -151.70001)" fill="url(#b8dc7ddd-0e76-4866-9241-0076e20120d3)"/><path d="M884.25427,197.00541a27.82923,27.82923,0,0,0-24.00514,12.39878c-1.58285,2.47751,2.91112,4.66665,4.48548,2.2024,4.01726-6.28806,11.65182-10.28019,19.90217-10.07359a25.35931,25.35931,0,0,1,20.6949,12.03672c1.58209,2.60731,5.72583.2365,4.15387-2.354C904.43151,202.88689,894.61425,197.23994,884.25427,197.00541Z" transform="translate(-164.04572 -151.70001)" fill="url(#febfb89e-07b1-4842-b918-627d114e5328)"/><path d="M916.21229,187.57009a46.319,46.319,0,1,0-7.57811,70.55357l33.4839,34.82842a2.25387,2.25387,0,0,0,3.18682.06272l8.34443-8.0223a2.25387,2.25387,0,0,0,.06272-3.18682l-33.4839-34.82842A46.32211,46.32211,0,0,0,916.21229,187.57009Zm-10.42905,55.9852a33.13094,33.13094,0,1,1,.922-46.84516A33.131,33.131,0,0,1,905.78324,243.55529Z" transform="translate(-164.04572 -151.70001)" fill="#6c63ff"/><path d="M858.28282,210.46212c-3.72547,0-3.73167,5.78988,0,5.78988C862.0083,216.252,862.0145,210.46212,858.28282,210.46212Z" transform="translate(-164.04572 -151.70001)" fill="#6c63ff"/><path d="M884.25427,191.914a27.82923,27.82923,0,0,0-24.00514,12.39878c-1.58285,2.47751,2.91112,4.66665,4.48548,2.2024,4.01726-6.28806,11.65182-10.28019,19.90217-10.07358a25.3593,25.3593,0,0,1,20.6949,12.03671c1.58209,2.60731,5.72583.2365,4.15387-2.354C904.43151,197.79545,894.61425,192.1485,884.25427,191.914Z" transform="translate(-164.04572 -151.70001)" fill="#6c63ff"/><rect x="4.90856" y="240.59998" width="867" height="59" fill="#e0e0e0"/><rect x="4.90856" y="339.59998" width="867" height="59" fill="#e0e0e0"/><rect x="4.90856" y="438.59998" width="867" height="59" fill="#e0e0e0"/><rect x="4.90856" y="537.59998" width="867" height="59" fill="#e0e0e0"/></svg>
-    </div>
-  </section>
-
-  <section class="toolbar container" *ngIf="res">
+  <section class="toolbar container">
     <ng-container *ngIf="res.total > 0">
-    <section class="statistic">
-      Total items: <strong>{{ res.total }}</strong>
-    </section>
-    <div class="pagination">
-      <button class="pagination__button" [disabled]="page == 1"  (click)="gotToPage(page - 1)"><i class="material-icons">keyboard_arrow_left</i></button>
-      <span>Page <strong>{{ page }}</strong> from: <strong>{{res.total_pages}}</strong></span>
-      <button class="pagination__button" (click)="gotToPage(page + 1)" [disabled]="page >= res.total_pages"><i class="material-icons">keyboard_arrow_right</i></button>
-    </div>
+      <section class="statistic">
+        Total items: <strong>{{ res.total }}</strong>
+      </section>
+      <div class="pagination">
+        <button class="pagination__button" [disabled]="page == 1" (click)="gotToPage(page - 1)"><i
+          class="material-icons">keyboard_arrow_left</i></button>
+        <span>Page <strong>{{ page }}</strong> from: <strong>{{res.total_pages}}</strong></span>
+        <button class="pagination__button" (click)="gotToPage(page + 1)" [disabled]="page >= res.total_pages"><i
+          class="material-icons">keyboard_arrow_right</i></button>
+      </div>
     </ng-container>
     <ng-container *ngIf="res.total === 0">
       There is no images like u want
@@ -63,13 +62,14 @@
 
   <section class="image-list-view container" [ngClass]="{'image-list-view--grid' : gridView}">
     <ng-container *ngFor="let image of images">
-      <article class="search-item" [ngClass]="{'search-item--grid' : gridView}" (click)="goToImageWebsite(image.links.html)">
+      <article class="search-item" [ngClass]="{'search-item--grid' : gridView}"
+               (click)="goToImageWebsite(image.links.html)">
         <div class="search-item__image-wrapper" [ngClass]="{'search-item__image-wrapper--grid' : gridView}">
           <i class="material-icons">
             image
           </i>
           <img
-            src="{{image.urls.thumb}}"
+            src="{{image.urls.small}}"
             alt="" class="search-item__thumbnail">
         </div>
         <div class="search-item__details" [ngClass]="{'search-item__details--grid' : gridView}">
@@ -77,15 +77,15 @@
           <dl class="search-item__list">
             <ng-container *ngIf="!gridView">
 
-              <dt class="search-item__label">Photo id: </dt>
+              <dt class="search-item__label">Photo id:</dt>
               <dd class="search-item__value"> {{ image.id }}</dd>
 
-              <dt class="search-item__label">Date of publication: </dt>
+              <dt class="search-item__label">Date of publication:</dt>
               <dd class="search-item__value"> {{image.created_at | amLocal | amDateFormat: 'YYYY-MM-DD HH:mm'}}</dd>
 
             </ng-container>
 
-            <dt class="search-item__label">Author: </dt>
+            <dt class="search-item__label">Author:</dt>
             <dd class="search-item__value">
               <a href="{{image.user.portfolio_url}}"
                  class="search-item__link"
@@ -97,7 +97,7 @@
 
           <p class="search-item__description">{{image.description}}</p>
 
-          <a class="search-item__button" href="{{ image.links.html }}" (click)="$event.stopPropagation()" >View</a>
+          <a class="search-item__button" href="{{ image.links.html }}" (click)="$event.stopPropagation()">View</a>
 
           <span class="search-item__status" *ngIf="image.created_at > expiredNewLabelDate">
             <i class="material-icons">
