--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,3 @@
-
 $small: 567px;
 $medium: 768px;
 $desktop: 1024px;
@@ -8,22 +7,26 @@ $wide: 1680px;
   @if $breakpoint == wide {
     @media only screen and (min-width: $wide) {
       @content;
-    } //1680
+    }
+    //1680
   }
   @if $breakpoint == desktop {
     @media only screen and (min-width: $desktop) {
       @content;
-    } //1024px;
+    }
+    //1024px;
   }
   @if $breakpoint == tab {
     @media only screen and (min-width: $medium) {
       @content;
-    } //760px;
+    }
+    //760px;
   }
   @if $breakpoint == phone {
     @media only screen and (min-width: $small) {
       @content;
-    } //550px;
+    }
+    //550px;
   }
 }
 
@@ -77,6 +80,7 @@ $wide: 1680px;
     align-items: center;
     border: 1px solid var(--primary-border-color);
     border-radius: 0;
+    overflow: hidden;
 
     i {
       width: 24px;
@@ -120,14 +124,34 @@ $wide: 1680px;
   background-color: #fff;
   padding: 1rem;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+
+  @include res(tab) {
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  @include res(desktop) {
+    flex-direction: row;
+  }
+}
+
+.statistic {
+  margin-bottom: 1rem;
+
+  @include res(tab) {
+    margin-bottom: 0;
+  }
 }
 
 .pagination {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
+  @include res(tab) {
+    justify-content: flex-start;
+  }
   &__button {
     width: 36px;
     height: 36px;
@@ -212,7 +236,15 @@ $wide: 1680px;
   }
 
   &--grid {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr;
+
+    @include res(tab) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include res(desktop) {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 
   img {
@@ -242,10 +274,13 @@ button img {
 
 .search-item {
   display: flex;
+  flex-direction: column;
   padding: 0.5rem;
   position: relative;
   height: 100%;
-
+  @include res(tab) {
+    flex-direction: row;
+  }
   &:hover {
     background-color: #dedede;
     cursor: pointer;
@@ -265,6 +300,7 @@ button img {
     flex-direction: column;
     border-bottom: 0 !important;
     margin-bottom: 1rem !important;
+
     &:hover {
       background-color: transparent;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
@@ -273,15 +309,20 @@ button img {
 
   &__image-wrapper {
     min-width: 128px;
-    width: 128px;
-    height: 128px;
+    width: 100%;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     overflow: hidden;
     position: relative;
+    margin-bottom: 0.5rem;
 
+    @include res(tab) {
+      width: 128px;
+      height: 128px;
+    }
     .material-icons {
       position: absolute;
       top: 50%;
@@ -308,10 +349,15 @@ button img {
 
   &__details {
     padding-left: 1rem;
-    padding-right: 5rem;
+    padding-bottom: 44px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include res(tab) {
+      padding-right: 5rem;
+      padding-bottom: 0;
+    }
 
     &--grid {
       padding: 0 0 44px 0;
@@ -352,6 +398,11 @@ button img {
     color: #767676;
     display: inline-block;
     margin-right: 0.2rem;
+    margin-top: 0.5rem;
+
+    @include res(desktop) {
+      margin-top: 0;
+    }
   }
 
   &__value {
@@ -383,6 +434,7 @@ button img {
 
   &__description {
     font-size: 0.875em;
+
   }
 }
 
@@ -407,28 +459,44 @@ button img {
 }
 
 .welcome-page {
-  min-height: calc(100vh - 57px);
+  min-height: calc(100vh - 105px);
   display: grid;
   place-items: center;
-  padding: 2rem;
+  padding: 1rem;
+
+  @include res(desktop) {
+    min-height: calc(100vh - 57px);
+    padding: 2rem;
+  }
+
   &__title {
     text-align: center;
     font-weight: 500;
+
     strong {
       font-weight: bold;
       color: var(--primary-color);
     }
   }
+
   svg {
-    max-width: 40vw;
-    max-height: 40vh;
+    max-width: 100%;
+    margin: auto;
+    display: block;
+    height: auto;
+
+    @include res(desktop) {
+      max-width: 40vw;
+    }
   }
 
   span {
     color: var(--primary-color);
   }
+
   h2 {
     margin-bottom: 2rem;
+    text-align: center;
   }
 }
 
