--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,14 +6,20 @@
   --primary-color: #ff4858;
   --primary-border-color: #ddd;
   --font-color: #222;
+  --content-background: #fff;
+  --search-item-value-color: #222;
+  --search-item-hover-background: #dedede;
 }
 
 .dark-mode {
   --body-background-color: #222;
-  --header-background-color: #000;
+  --header-background-color: #181818;
   --font-color: #fff;
-  --primary-color: yellow;
+  --primary-color: #ff4858;
   --primary-border-color: #ddd;
+  --content-background: #464646;
+  --search-item-value-color: #dadada;
+  --search-item-hover-background: #222;
 }
 
 * {
